# SOPForge

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  USER_MANUAL.md  install.bat  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run-loop.ps1  sopforge-server.spec  sopforge.spec  uninstall.bat  uninstall.ps1
.claude/: settings.json
.claude/agents/: planner.md  reviewer.md
.claude/commands/: goal.md
.claude/hooks/: pretooluse.ps1
.claude/skills/: uia-notes.md
config/: models.toml
fixtures/: degenerate_captions.json  empty-elements-manifest.json  golden-document.xml  manifest.schema.json  review-report-manifest.json  review-report-transcript.json  sample-manifest.json  sample-transcript.json
phases/: 01-capture.md  01-results.md  01-tasks.md  02-pipeline.md  02-results.md  02-tasks.md  03-exports.md  03-results.md  03-tasks.md  04-polish-exports.md  05-vision-step-text-measurement.md  DEVIATIONS.md
scripts/: build_exe.py  build_release.py  build_server_exe.py  check_elevated_hotkey.py  measure_vision_steps_live.py  proof_pipeline_e2e_live.py  proof_polish_live.py  regen_golden.py  sign_dist.ps1  sopforge-signing-cert.cer  spike_uia.py  test_install.ps1  verify_exe.py
src/: sopforge_version.py
src/capture/: __init__.py  __main__.py  uia.py  (+9 more)
tests/: conftest.py  test_build_exe.py  test_check_elevated_hotkey.py  test_hooks_shots.py  test_manifest_schema.py  test_manifest_writer.py  test_narration.py  test_recorder.py  test_redaction.py  test_selftest.py  test_tray.py  test_uia_resolver.py  test_upload.py  test_verify_exe.py
(+85 files in other folders)
