[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sopforge-capture"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["capture*", "pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: browser-based UI smoke tests requiring playwright + chromium (opt-in via -m ui; excluded from the default run so the core suite stays browser-free)",
]
addopts = "-m 'not ui'"
