[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sopforge-capture"
version = "1.5.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["capture*", "pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ui: browser-based UI smoke tests requiring playwright + chromium (opt-in via -m ui; excluded from the default run so the core suite stays browser-free)",
    "exe: end-to-end tests requiring a pre-built dist/sopforge-server/sopforge-server.exe (opt-in via -m exe; excluded from the default run since the EXE is a build artifact, not always present)",
]
addopts = "-m 'not ui and not exe'"
